2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	icons for "label" and "icon", show tooltip on the type icons, hidde some
	fields as type of row. And now the image field show to icon type item and
	of course update too.
	
	Fixes: #3188080

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Lost commit from trunk. Modified function
	printTruncateText function.

	Fixes: #3175780  

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/reporting/visual_console_builder.editor.js: fixed the update the
	items, now don't change the position if the data haven't the position.
	
	Fixes: #3188069

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Lost commit from trunk. Truncated
	agent name in this view.

	Fixes: #3175780

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php: added in function "get_group_agents" the
	parameter "$childGroups" for get the child groups. And in the function
	"get_user_groups" added the parameter "$id_groups" for to get groups. Add
	the function "get_id_groups_recursive" for to get groups in the tree groups.
	 
	* godmode/reporting/visual_console_builder.wizard.php: fixed the select box
	of agents when user have agents in subgroup in any subgroup in the tree
	group.
	
	Fixes: #3180902

2011-02-21 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/alert_templates.php: Truncated Group name
	* godmode/alerts/alert_actions.php: Truncated Group name

2011-02-21  Ramon Novoa  <rnovoa@artica.es>

	* godmode/massive/massive_edit_agents.php: Merged from trunk. Check for
	  false instead of the number of updated agents.

2011-02-21  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Support for android and embedded agents.

	* images/os_icons/android_small.png